# qwen3-tts-bridge-cpp

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: cpp-checks.yml  packaged-worker-smoke.yml  python-checks.yml
docs/: audio-and-unity-integration.md  protocol-v1.md
examples/: SaveWavCallbacks.cpp  SaveWavCallbacks.hpp  WavWriter.cpp  WavWriter.hpp  qwen_tts_save_wav.cpp
scripts/: check-python.ps1  package-worker.ps1  setup-python-dev.ps1  setup-python-packaging.ps1  test-packaged-qwen-worker.ps1  test-packaged-worker.ps1
src/qwen_tts_bridge/: audio.hpp  client.hpp  data.hpp  session.hpp  transport.hpp
src/qwen_tts_bridge/audio/: SaveWavCallbacks.cpp  SaveWavCallbacks.hpp  WavWriter.cpp  WavWriter.hpp
src/qwen_tts_bridge/client/: ClientTypes.hpp  QwenTtsClient.cpp  QwenTtsClient.hpp
src/qwen_tts_bridge/data/: enums.hpp  protocol_types.hpp
src/qwen_tts_bridge/protocol/: control.hpp  framing.hpp
src/qwen_tts_bridge/protocol/control/: ControlCodec.cpp  ControlCodec.hpp  ControlCodecInternal.hpp  ControlDecode.cpp  ControlEncode.cpp  ControlJson.cpp  ControlMessages.hpp  ControlValidation.cpp  ErrorCodec.cpp
src/qwen_tts_bridge/protocol/framing/: FrameCodec.cpp  FrameCodec.hpp  FrameParser.cpp  FrameParser.hpp
src/qwen_tts_bridge/session/: WorkerSession.cpp  WorkerSession.hpp
src/qwen_tts_bridge/transport/: ITransport.hpp
src/qwen_tts_bridge/transport/stdio/: StdIoTransport.cpp  StdIoTransport.hpp
tests/: control_codec_test.cpp  protocol_frame_test.cpp  qwen_tts_client_test.cpp  qwen_tts_save_wav_callbacks_test.cpp  stdio_transport_test.cpp  worker_session_test.cpp
tests/python/: test_engine_factory.py  test_metrics.py  test_mock_worker.py  test_protocol.py  test_qwen_engine.py  test_qwen_import_contract.py  test_qwen_packaging_shims.py  test_stdio_server_lifecycle.py  verify_packaged_worker.py  verify_wav.py
worker/: pyproject.toml  requirements-dev.in  requirements-dev.lock.txt
worker/packaging/: nuitka-qwen-narrow-audio.yml  nuitka-qwen-runtime.yml  probe_qwen_imports.py  qwen_tts_worker_entry.py
worker/qwen_tts_bridge_worker/: config.py  main.py
worker/qwen_tts_bridge_worker/engine/: __init__.py  base.py  factory.py  mock_engine.py  qwen_engine.py  types.py
worker/qwen_tts_bridge_worker/protocol/data/: __init__.py  protocol_types.py
worker/qwen_tts_bridge_worker/protocol/framing/: codec.py  parser.py
worker/qwen_tts_bridge_worker/server/: stdio_server.py
worker/src/qwen_tts_bridge_worker/: __init__.py  __main__.py  cli.py  config.py  main.py
worker/src/qwen_tts_bridge_worker/engine/: __init__.py  base.py  factory.py  mock_engine.py  qwen_engine.py  types.py
worker/src/qwen_tts_bridge_worker/engine/qwen/: __init__.py  model_loader.py
worker/src/qwen_tts_bridge_worker/packaging/: __init__.py  qwen_runtime_shims.py
worker/src/qwen_tts_bridge_worker/protocol/: __init__.py
worker/src/qwen_tts_bridge_worker/protocol/control/: __init__.py  messages.py
worker/src/qwen_tts_bridge_worker/protocol/data/: enums.py  protocol_types.py
worker/src/qwen_tts_bridge_worker/protocol/framing/: __init__.py  codec.py  parser.py
worker/src/qwen_tts_bridge_worker/server/: __init__.py  metrics.py  stdio_server.py
